--- a/environment.yml
+++ b/environment.yml
@@ -1,53 +1,33 @@
-name: web_geospatial
+name: xpublish_opendap_server
 channels:
   - conda-forge
   - nodefaults
 
+# a minimal environment for Xpublish-OPeNDAP-Server
 dependencies:
   - python =3.11
 
   # For data processing 
-  - pandas
   - xarray
-  - cf_xarray
-  - rioxarray
   - dask
-  - geopandas
-  - gdptools
-
 
   # For API access and data formats
   - intake
   - intake-xarray
-  - pydap
   - xpublish
-  - odc-stac
-  - kerchunk
+  - xpublish_opendap
   - fsspec
+  - kerchunk # not sure if necessary yet
   - s3fs
   - h5netcdf
-  - pyarrow
   - zarr
 
-    # Interactivity & Visualization (optional, but required for viz)
-  - jupyterlab
-  - ipympl
-  - nodejs
-  - hvplot
-  - holoviews
-  - geoviews
-  - cartopy
-
-# Dev tools: Language Server Protocol (LSP) (Optional), for:
+  # Dev tools: Language Server Protocol (LSP) (Optional), for:
   - python-lsp-server # LSP extension for Python (pylsp), including:
   - pylsp-mypy  # MyPy type checking for Python >=3.7.
-  - jupyterlab-lsp # Provides both server extension and lab extension
 
   # Package management
   - conda
-  - mamba
-  - conda-libmamba-solver  # Faster env solver, https://conda.github.io/conda-libmamba-solver/
+  - conda-build
+  - conda-libmamba-solver
   - pip
-
-pip:
-  - pystac-client
