--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,15 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "catalog_to_xpublish"
+version = "0.1.0"
 description = "This repository enables one to spin-up a FastAPI/Xpublish server from an Intake or STAC catalog."
+authors = [
+    "Xavier R Nogueira <xavier.rojas.nogueira@gmail.com>",
+]
+maintainers = [
+    "Xavier R Nogueira <xavier.rojas.nogueira@gmail.com>",
+]
+
 readme = "README.md"
 requires-python = ">=3.11"
 keywords = [
@@ -41,5 +49,3 @@ dependencies = [
 
 [tool.setuptools]
 packages = ["catalog_to_xpublish"]
-
-
