--- a/environment.yml
+++ b/environment.yml
@@ -25,7 +25,8 @@ dependencies:
   # Dev tools: Language Server Protocol (LSP) (Optional), for:
   - python-lsp-server # LSP extension for Python (pylsp), including:
   - pylsp-mypy  # MyPy type checking for Python >=3.7.
-
+  - pydantic
+  
   # Package management
   - conda
   - conda-build
