--- a/dev_environment.yml
+++ b/dev_environment.yml
@@ -25,7 +25,8 @@ dependencies:
   # Dev tools: Language Server Protocol (LSP)
   - python-lsp-server # LSP extension for Python (pylsp), including:
   - pylsp-mypy  # MyPy type checking for Python >=3.7.
-
+  - pydantic
+  
   # Dev tools: For testing and pre-commit hooks
   - pytest
   - pre-commit
