--- a/environment.yml
+++ b/environment.yml
@@ -9,6 +9,7 @@ dependencies:
 
   # For data processing
   - xarray
+  - xpublish
   - dask
 
   # For catalog access
@@ -33,6 +34,3 @@ dependencies:
   - conda-libmamba-solver
   - pip
 
-  # we get the latest version of xpublish from github
-  - pip:
-    - git+https://github.com/xpublish-community/xpublish.git
