Added coverage to dev environment

--- a/dev_environment.yml
+++ b/dev_environment.yml
@@ -47,6 +47,7 @@ dependencies:
 
   # Dev tools: For testing and pre-commit hooks
   - pytest
+  - pytest-cov
   - pre-commit
 
   # Package management
