--- a/demo_environment.yml
+++ b/demo_environment.yml
@@ -1,6 +1,7 @@
-name: catalog_to_xpublish_dev
+name: catalog_to_xpublish_demo
 channels:
   - conda-forge
+  - pyviz
   - nodefaults
 
 # a larger environment for Catalog-To-Xpublish to support development and demos
@@ -26,6 +27,17 @@ dependencies:
 
   # xpublish plugins
   - xpublish-opendap
+  - xpublish-edr
+
+  # for demo
+  - jupyterlab
+  - ipympl
+  - nodejs
+
+  # get holoviews libs from pyviz
+  - holoviews >=1.12.0
+  - hvplot
+  - geoviews >=1.6.2 # pinned to avoid this issue: https://github.com/holoviz/geoviews/issues/334
 
   # Dev tools: Language Server Protocol (LSP)
   - python-lsp-server # LSP extension for Python (pylsp), including:
@@ -36,7 +48,6 @@ dependencies:
   # Dev tools: For testing and pre-commit hooks
   - pytest
   - pytest-cov
-  - httpx
   - pre-commit
 
   # Package management
