Split out AWS required tests from basic test

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,9 +30,10 @@ jobs:
           && pip install -e . --no-deps --force-reinstall
           && micromamba info
           && micromamba list
-        
+
       - name: tests
         shell: bash -l {0}
         run: >
           micromamba activate DEV_ENV
-          && pytest tests/
+          && pytest tests/test_1_intake_catalog_setup.py
+          && pytest tests/test_2_stac_catalog_setup.py
