Revert "Update for pydantic 2.0+"
This reverts commit a5b28e48f6cd7b73968b792ef973dfca77941503.

--- a/environment.yml
+++ b/environment.yml
@@ -11,7 +11,6 @@ dependencies:
   - xarray
   - xpublish
   - dask
-  - pydantic >=2.0
 
   # For catalog access
   - intake
@@ -27,6 +26,7 @@ dependencies:
   # Dev tools: Language Server Protocol (LSP) (Optional), for:
   - python-lsp-server # LSP extension for Python (pylsp), including:
   - pylsp-mypy  # MyPy type checking for Python >=3.7.
+  - pydantic
 
   # Package management
   - conda
