--- a/dev_environment.yml
+++ b/dev_environment.yml
@@ -11,7 +11,6 @@ dependencies:
   - xpublish
   - xarray
   - dask
-  - pydantic >=2.0
 
   # For catalog access
   - intake
@@ -32,6 +31,7 @@ dependencies:
   - python-lsp-server # LSP extension for Python (pylsp), including:
   - pylsp-mypy  # MyPy type checking for Python >=3.7.
   - jupyterlab-lsp
+  - pydantic
 
   # Dev tools: For testing and pre-commit hooks
   - pytest
