define intake version

--- a/dev_environment.yml
+++ b/dev_environment.yml
@@ -13,8 +13,8 @@ dependencies:
   - dask
 
   # For catalog access
-  - intake
-  - intake-xarray
+  - intake=0.7.0
+  - intake-xarray=0.7.0
   - pystac
 
   # For API access and data formats
